--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ Many of our components require the use of JavaScript to function. Specifically, 
         <address>
           <a href="tel:407-779-2417"><img src="https://img.icons8.com/wired/64/000000/phone.png"/></a>
           <a href="https://www.linkedin.com/in/kristen-mayorga/m"><img src="https://img.icons8.com/wired/64/000000/linkedin.png"/></a>
-          <a href="https://github.com/Mayorgak/kristenmayorga.github.io"><img src="https://img.icons8.com/dotty/80/000000/github.png"/></a>
+          <a href="https://github.com/Mayorgak"><img src="https://img.icons8.com/dotty/80/000000/github.png"/></a>
           <a href="mailto:kristenmayorga@gmail.com"><img src="https://img.icons8.com/dotty/80/000000/gmail-login.png"/> </a>
         </address>
         </div>
