--- a/index.html
+++ b/index.html
@@ -123,6 +123,21 @@
           </div>
         </div>
 
+         <div class="col-md-4">
+          <div class="card mb-4 shadow-lg">
+            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src="./assets/images/Tic-Tac-Toe.png"></img>
+            <div class="card-body">
+              <p class="card-text">Tic Tac Toe buit with  HTML, CSS and JavaScript. </p>
+              <div class="d-flex justify-content-between align-items-center">
+                <div class="btn-group">
+                   <a type="button" target="_blank" class="btn btn-sm btn-outline-secondary" href="https://mayorgak.github.io/tic-tac-toe/">View</a>
+                </div>
+              
+              </div>
+            </div>
+          </div>
+        </div>
+
     <hr>
 
   </div> <!-- /container -->
